# gtk-rust-embedded

./: Cargo.toml
.cargo/: config
src/: main.rs
